# valheim-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.windows  README.md  install_steamcmd.sh  save.sh  startup.sh  upload_image.sh
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
src/: executable.rs  main.rs
src/aws/: s3.rs
src/commands/: backup.rs  start.rs
src/files/: config.rs  mod.rs  zip.rs
src/scripts/: auto_backup.sh  entrypoint.sh
