[package]
name = "odin"
version = "1.2.0"
authors = ["mbround18 <12646562+mbround18@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
which = "4.0.2"
serde = { version = "1.0", features = ["derive"], default_features = false  }
sysinfo = { version = "0.16.1", default_features = false }
serde_json = "1.0"
daemonize = "0.4"
tar = "0.4"
flate2 = "1.0"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
tokio = { version = "1.3.0", features = ["fs"] }

[dev-dependencies]
rand = "0.8.3"


[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3
